# mensa-whatsapp-worker-public

./: .env.sample  .env.staging  .gitignore  README.md  chat.js  client_secret_staging.json  compose.yaml  eslint.config.cjs  eslint.config.mjs  getphones.js  googlesheets.js  index.js  jest.config.js  messages.js  mongo.js  package-lock.json  package.json  pgsql.js  phone-check.js  re-add.js  sample.env  sendtodb.js  testPhone.js  twilio.js
.github/workflows/: lint.yaml  test.yaml
dispatcher/src/: main.js
scheduler/: package.json
sqs/: pyproject.toml
src/: index.js  main.js
src/core/: addMode.js  addMode.mjs  addQueue.cjs  addQueue.mjs  addTask.mjs  add_members.js  authorization.mjs  fetchMessagesMode.cjs  fetchMessagesMode.js  fetchMessagesMode.mjs  moderations.mjs  removeMode.js  removeMode.mjs  removeQueue.cjs  removeQueue.mjs  removeTask.mjs  reportMode.cjs  reportMode.js  reportMode.mjs  scanMode.cjs  scanMode.js  scanMode.mjs
src/database/: pgsql.cjs  pgsql.js  pgsql.mjs  redis.cjs  redis.js  redis.mjs
src/utils/: chat.cjs  chat.js  chat.mjs  checkGroupType.mjs  clientOperations.mjs  groups.mjs  messages.js  misc.cjs  misc.js  misc.mjs  phone-check.cjs  phone-check.mjs  re-add.js  sqs_conn.js  telegram.mjs  testPhone.js  twilio.cjs  twilio.js  twilio.mjs
tests/: chat.test.js  main.test.js  messages.test.js  pgsql.test.js  phone-check.test.js  setEnvVars.mjs  setup.js
tests/core/: add.test.js  fetch.test.js  remove.test.js  report.test.js  scan.test.js
tests/database/: pgsql.test.js  redis.js
tests/dispatcher/: main.test.js
(+16 files in other folders)
