[project]
name = "sqs"
version = "0.1.0"
description = "Simulated SQS service from amazon."
readme = "README.md"
authors = [
    { name = "Hiago Teixeira", email = "hiagodevsolutions@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.36.20",
    "flask>=3.1.0",
    "moto>=5.0.28",
]
